--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-/* * {
+* {
     font-family: sans-serif;
     padding: 0;
     margin: 0;
@@ -177,4 +177,4 @@ ul li:hover .dropdown {
     border-radius: 0;
     height: 33vh;
   } 
-  */
+ 
