--- a/root/css/index.css
+++ b/root/css/index.css
@@ -258,3 +258,22 @@ form {
     font-size: 1.2em;
     border-radius: 3px;
 }
+
+.hlavni {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: space-around;  
+}
+
+.produkty {
+    border: solid 2px yellow;
+    width: 30%;
+    height: 30vh;
+    display: flex;
+    flex-direction: column;
+}
+.button {
+    border: solid 1px yellow;
+    
+}
